Выполнение ТЗ Проекта №7. исправление ошибок!